# ska-oso-services

./: .dockerignore  .env.example  .flake8  .flaskenv  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  codegen-conf.json  pyproject.toml  sonar-project.properties
charts/ska-oso-odt-services/: Chart.yaml  values.yaml
charts/ska-oso-odt-services-umbrella/: Chart.yaml  values.yaml
charts/ska-oso-odt-services/templates/: _helpers.tpl  environment.yaml  rest.yaml
charts/ska-oso-odt-services/tests/: environment_test.yaml
charts/ska-oso-services/: Chart.yaml  values.yaml
charts/ska-oso-services-umbrella/: Chart.yaml  values-integration.yaml  values-staging.yaml  values.yaml
charts/ska-oso-services-umbrella/template/: secret.yaml
charts/ska-oso-services-umbrella/templates/: all_secrets.yaml
charts/ska-oso-services/templates/: _helpers.tpl  all_secrets.yaml  environment-oda.yaml  environment.yaml  oda-environment.yaml  oda-secret.yaml  oda_secret.yaml  pht-secrets.yaml  pht_secrets.yaml  rest.yaml  secret-oda.yaml  secret.yaml
charts/ska-oso-services/tests/: environment_test.yaml  oda_environment_test.yaml
docs/src/: conf.py  index.rst  odt_rest_api.rst  persistence.rst  prj_and_sbd.rst  restapi.rst
docs/src/deployment/: configuration.rst  deployment_to_kubernetes.rst  environment_variables.rst  persistent_environments.rst  secret_management.rst
docs/src/diagrams/: create_proposal_api.puml  edit_proposal_api.puml  get_list_of_proposals_by_user_id_api.puml  get_proposal_api.puml
docs/src/general/: background.rst
docs/src/internal/: module_view.rst  persistence.rst  prj_and_sbd.rst  prsl.rst
docs/src/internal/diagrams/: create_proposal_api.puml  delete_pdf_api.puml  download_pdf_api.puml  edit_proposal_api.puml  get_list_of_proposals_by_user_id_api.puml  get_proposal_api.puml  module_top_view.puml  module_view.puml  module_view_osd.puml  module_view_pht.puml  ppt_endpoints.puml  proposal_permission.puml  send_email_api.puml  upload_pdf_api.puml  validate_proposal_api.puml
src/ska_oso_odt_services/: __init__.py  api.py  codec.py  validation.py  wsgi.py
src/ska_oso_odt_services/openapi/: common-openapi-v1.yaml  odt-openapi-v1.yaml  sbd-openapi-v1.yaml
src/ska_oso_services/: __init__.py  app.py  settings.py  wsgi.py
src/ska_oso_services/common/: __init__.py  astro.py  auth.py  calibrator_strategy.py  calibrators.py  constants.py  coordinateslookup.py  error_handling.py  fastapicontext.py  model.py  oda.py  osdmapper.py  sdpmapper.py  visibility.py
src/ska_oso_services/common/api/: __init__.py  calibrators.py  coordinates.py  visibility.py
src/ska_oso_services/common/static/: calibrator_table.ecsv  constants.py
src/ska_oso_services/common/transformers/: pht_handler.py
src/ska_oso_services/common/utils/: coordinates.py  s3_bucket.py  validation.py
src/ska_oso_services/engineering/: __init__.py
src/ska_oso_services/engineering/api/: ebs.py
src/ska_oso_services/odt/: __init__.py  adapter.py  api.py  codec.py  validation.py
src/ska_oso_services/odt/api/: __init__.py  configuration.py  prjs.py  prsls.py  sbds.py  sdp.py
src/ska_oso_services/openapi/: common-openapi-v1.yaml  odt-openapi-v1.yaml  oso-components-openapi-v1.yaml  prj-jsonschema.yaml  prj-openapi-v1.yaml  sbd-jsonschema.yaml  sbd-openapi-v1.yaml
src/ska_oso_services/pht/: __init__.py  model.py  validation.py
src/ska_oso_services/validation/: __init__.py  constraints.py  csp.py  mccs.py  model.py  sbdefinition.py  scan.py  scans.py  target.py
tests/: conftest.py  db_fixtures.py  xray-config.json
tests/component/: __init__.py  conftest.py  test_api.py  test_auth.py  test_common_api.py  test_engineering_api.py  test_odt_api.py  test_odt_configuration_api.py  test_odt_prjs_api.py  test_odt_project_and_sbd_generation.py  test_odt_project_generation.py  test_odt_sbds_api.py  test_panel_decision_api.py  test_panels.py  test_ppt_api.py  test_proposal_access.py  test_prsls_api.py  test_report.py  test_reviews_api.py  test_validation_api.py
tests/fixtures/: user-portal.openapi.yaml
tests/integration/: README.md  conftest.py  test_user_portal_proxy_contract.py
tests/k8s/: conftest.py  test_smoke.py
tests/live/: conftest.py  test_indigo_auth.py
tests/odt/: xray-config.json
tests/odt/component/: __init__.py
tests/pht/component/: test_osd_client.py
tests/pht/unit/: conftest.py  testfile_sample_proposal_post_validation_body_no_target_in_result.json  testfile_sample_proposal_post_validation_result_no_target_in_result.json  testfile_sample_proposal_post_validation_result_result_no_obs.json
tests/unit/: conftest.py  test_api.py  test_codec.py  test_validation.py  util.py
tests/unit/common/: test_astro.py  test_calibrator_strategy.py  test_calibrators.py  test_coordinateslookup.py  test_osdmapper.py  test_visibility.py
tests/unit/files/: complete_proposal.json  create_proposal.json  expected_cal_sweep_sbd.json  expected_freq_sweep_sbd.json  expected_gsm_sbd.json  expected_low_sbd.json  expected_mid_sbd.json  get_reviewers.json  low_multiple_subarray_beams.json  low_multiple_subarray_beams_invalid.json  low_multiple_subarray_beams_multiple_apertures_multiple_spws_with_pst.json  mid_empty_sbd_from_odt.json  mid_multiple_targets_with_observing_constraints_invalid.json  mid_multiple_targets_with_observing_constraints_valid.json  mid_single_scan_with_constraints.json  mid_sso_targets_with_observing_constraints.json  panel_decision.json  panel_review.json  project.json  project_with_low_observation_set.json  project_with_mid_observation_set.json  testfile_sample_mid_sb.json  testfile_sample_project.json
tests/unit/odt/: conftest.py  test_api.py  test_codec.py  test_validation.py  testfile_sample_mid_sb.json
tests/unit/odt/api/: conftest.py  (+5 more)
tests/unit/pht/: test_s3_bucket_util.py
tests/unit/validation/: __init__.py  test_constraints.py  test_csp.py  test_mccs.py  test_model.py  test_sbdefinition.py  test_scans.py  test_target.py
tmdata/ska-sdp/scripts/: scripts.yaml
(+104 files in other folders)
