[tool.poetry]
name = "ska-oso-services"
version = "1.0.0"
description = "SKA OSO Services provides APIs for the PHT and ODT"
authors = ["Team Buttons"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/oso/ska-oso-services"
documentation = "https://developer.skao.int/projects/ska-oso-services/en/latest/index.html"
keywords = ["SKA OSO"]
packages = [
    { include = "ska_oso_services", from = "src" }
]
include = [
    { path = 'tests' }
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

# Uncomment this and the line below to include a non-released ODA version
#[[tool.poetry.source]]
#name = "gitlab-ska-db-oda"
#url = "https://gitlab.com/api/v4/projects/27507143/packages/pypi/simple"
#
#[[tool.poetry.source]]
#name = "gitlab-ska-ost-osd"
#url = "https://gitlab.com/api/v4/projects/55825670/packages/pypi/simple"
#priority = "explicit"


[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
ska-ser-logging = "^0.4.1"
# PDM dependency is pulled in via the ODA rather than being explicitly set here
# If updating this, also remember to update the Helm dependency in the umbrella chart
ska-db-oda = "^7.4.0"
# ska-db-oda = { version="5.3.3+dev.cea0b078b", source="gitlab-ska-db-oda" }
pydantic = "^2.9"
fastapi = {extras = ["standard"], version = "^0.115.8"}
astroquery = "0.4.9"
ska-ost-osd = "3.1.1"
aiosmtplib = "^4.0.1"
boto3 = "^1.38.13"

ska-aaa-authhelpers = "^1.0.0"
# Need to pin as otherwise pip cannot resolve the dependencies in the tests.
# This dependency comes through the osd > telmodel, so reasses when updating those.
argcomplete = "^1.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
black = "^24.0.0"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pylint-junit = "^0.3.2"
flake8 = "^7.0.0"
deepdiff = "^7.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinxcontrib-openapi= "^0.7.0"
myst-parser = "^1.0.0"
ska-ser-sphinx-theme = "^0.1.2"

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"

[tool.isort]
profile = "black"
line_length = 88
skip = "src/ska_oso_services/odt/generated,src/ska_oso_services/openapi/__submodules__"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | src/ska_oso_services/odt/generated
    | src/ska_oso_services/openapi/__submodules__
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint]
disable = "C,R,W3101,W0511"
ignore = "ska-oso-pdm,generated"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
