[project]
name = "ska-oso-services"
version = "16.1.0"
description = "SKA OSO Services provides APIs for the PHT and ODT"
authors = [
    { name = "Team Buttons" },
    { name = "Stargazers Team" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["SKA OSO"]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "python-dateutil>=2.8.2",
    "ska-ser-logging>=0.4.1",
    # PDM dependency is pulled in via the ODA rather than being explicitly set here
    # If updating this, also remember to update the Helm dependency in the umbrella chart
    "ska-db-oda>=19.0.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "fastapi[standard]>=0.115.8",
    "astroquery==0.4.9",
    "ska-ost-osd>=6.0.4",
    "ska-telmodel-client>=1.30.0",
    "aiosmtplib>=4.0.1",
    "boto3>=1.38.13",
    "ska-aaa-authhelpers>=1.5.0",
    # Need to pin as otherwise pip cannot resolve the dependencies in the tests.
    # This dependency comes through the osd > telmodel, so reasses when updating those.
    "argcomplete>=1.9.4",
    "msal>=1.33.0",
    "astroplan>=0.10.1",
    "matplotlib>=3.10.7",
    "numpy<2.4",
]

[project.urls]
repository = "https://gitlab.com/ska-telescope/oso/ska-oso-services"
documentation = "https://developer.skao.int/projects/ska-oso-services/en/latest/index.html"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-forked>=1.6.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.15.20",
    "deepdiff>=7.0.0",
    "ska-ser-xray>=0.7.0",
    "numpy<2.4.0",
    "httpx>=0.20",
    "testcontainers>=4.14.2",
]
docs = [
    "sphinxcontrib-openapi>=0.8.4",
    "sphinx-pydantic>=0.1.1",
    "myst-parser>=4.0.1",
    "ska-ser-sphinx-theme>=0.2.1",
    # required to resolve the following import issue:
    # Could not import extension sphinxcontrib.openapi (exception: cannot import name 'error_string' from 'docutils.io'
    "mistune>=2",
    # Required to be installed for the autodocs for the version check
    "ska-ost-osd>=6.0.1",
    "tomli>=2.4.0",
]

[tool.pytest.ini_options]
markers = [
    "live: requires live network access to the staging Indigo IAM (deselect with '-m not live')",
]

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = [
    ".make",
    "src/ska_oso_services/odt/generated",
    "src/ska_oso_services/openapi/__submodules__",
]

[tool.ruff.lint]
# E/F/W: flake8 equivalents; I: isort; PLW: pylint warnings (C and R categories excluded)
select = ["E", "F", "W", "I", "PLW"]

[tool.ruff.format]
# Defaults match Black behaviour

[build-system]
requires = ["uv-build>=0.6.6,<1"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "supplemental"

#- uv explicit sources ----------------------------------------------------------------
#
# priority='explicit' means these indexes are only used when a package is explicitly
# assigned to them via [tool.uv.sources]. Useful for development-time overrides.
#
[[tool.uv.index]]
name = "gitlab-ska-db-oda"
url = "https://gitlab.com/api/v4/projects/27507143/packages/pypi/simple"
priority = "explicit"

[[tool.uv.index]]
name = "gitlab-ska-oso-pdm"
url = "https://gitlab.com/api/v4/projects/17509042/packages/pypi/simple"
priority = "explicit"

[[tool.uv.index]]
name = "gitlab-ska-ost-osd"
url = "https://gitlab.com/api/v4/projects/55825670/packages/pypi/simple"
priority = "explicit"

[[tool.uv.index]]
name = "gitlab-ska-ser-xray"
url = "https://gitlab.com/api/v4/projects/39434823/packages/pypi/simple"
priority = "explicit"
